removed Map to fix site, updated filters

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<div class="h-75 mt-10 bg-gradient-to-b from-sky-700 to-sky-900">
+<div class="h-75  bg-gradient-to-b from-sky-700 to-sky-900">
   
 </div>
