--- a/src/pages/homes/[modelNumber].astro
+++ b/src/pages/homes/[modelNumber].astro
@@ -57,8 +57,8 @@ const photos = [
 
 <Layout>
   <Lightbox client:load photos={photos} aria-hidden="true" />
-  <MarginedContent>
-    <section class="flex flex-col w-full gap-5">
+  <div class="w-full flex flex-col items-center pb-10 px-5 md:px-7 lg:px-10">
+    <section class="max-w-[88rem] flex flex-col w-full gap-5">
       <div
         class="border-b-1 border-slate-200 bg-white flex flex-col w-full gap-2 justify-between items-center py-3"
       >
@@ -75,7 +75,7 @@ const photos = [
 
       <HomeTabs />
     </section>
-  </MarginedContent>
+  </div>
 </Layout>
 
 <script></script>
