--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
+import FiltersBar from "@/modules/filters/static/FiltersBar.astro";
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon/components";
-
+import HomePageSearchFilter from "@/components/HomePageSearchFilter.astro";
+import { getCollection } from "astro:content";
+import { getFilters } from "@/modules/filters/utils/getFilters";
+import { getHomeFilters } from "@/utils/filters";
+export const prerender = false;
 // const response = await fetch("https://d1-http.mceryak.workers.dev/homes");
 // const homes = await response.json();
+
+const homes = (await getCollection("homes")).map((home) => home.data);
+const filters = getHomeFilters(homes);
 ---
 
 <Layout>
@@ -15,14 +23,22 @@ import { Icon } from "astro-icon/components";
   >
     <div class="absolute top-0 left-0 w-full h-full bg-black/50">
       <div
-        class="p-4 rounded-3xl bg-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex gap-2 items-center justify-center"
+        class="flex flex-col justify-center items-center gap-7 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 "
       >
-        <div class="border-2 border-gray-300 rounded-4xl p-2 h-full">
-          <select name="beds" id="beds-select">
-            <option value="1">Modular</option>
-            <option value="2">Manufactured</option>
-          </select>
-        </div>
+      <h1 class="text-zinc-100 font-light text-5xl italic text-center">Find Your Dream Home Today!</h1>
+      <!-- <FiltersBar filters={[{field: 'type', label: 'Type', options: ['Manufactured', 'Modular', 'Park Model']}]}/> -->
+       
+      
+      <form action="homes" class="p-4 rounded-3xl bg-white flex gap-2 items-center justify-center">
+        {filters.map(filter => (<HomePageSearchFilter filter={filter} />))}
+        <button
+        type="submit"
+          class="cursor-pointer bg-sky-800 rounded-3xl hover:scale-110 transition-transform"
+        >
+          <Icon name="mdi:search" class="w-11 h-11 text-zinc-200 p-2" />
+        </button>
+      </form>
+          <!--
         <div class="border-2 border-gray-300 rounded-4xl p-2">
           <select name="beds" id="beds-select">
             <option value="1">900 - 1200 sqft</option>
@@ -44,13 +60,9 @@ import { Icon } from "astro-icon/components";
             <option value="3">3 Baths</option>
             <option value="4">4 Baths</option>
           </select>
-        </div>
+        </div> -->
         <!-- <input class="border-2 border-gray-300 rounded-4xl cursor-auto p-2 w-88" type="text"/> -->
-        <button
-          class="cursor-pointer bg-sky-800 rounded-3xl hover:scale-110 transition-transform"
-        >
-          <Icon name="mdi:search" class="w-11 h-11 text-zinc-200 p-2" />
-        </button>
+        
       </div>
     </div>
 
