--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const filters = getHomeFilters(homes);
     src="https://michaelceryak.com/cdn-cgi/image/width=80,quality=75/https://cdn.michaelceryak.com/image/r2Image1.png"
   /> -->
   <div
-    class="relative w-full h-[500px] object-cover bg-[url(/images/hero-temp.jpg)]"
+    class="relative w-full h-[500px]  bg-[url(/images/hero-temp.jpg)]  bg-cover bg-center"
   >
     <div class="absolute top-0 left-0 w-full h-full bg-black/50">
       <div
@@ -38,39 +38,10 @@ const filters = getHomeFilters(homes);
           <Icon name="mdi:search" class="w-11 h-11 text-zinc-200 p-2" />
         </button>
       </form>
-          <!--
-        <div class="border-2 border-gray-300 rounded-4xl p-2">
-          <select name="beds" id="beds-select">
-            <option value="1">900 - 1200 sqft</option>
-            <option value="1">1200 - 1500 sqft</option>
-          </select>
-        </div>
-        <div class="border-2 border-gray-300 rounded-4xl p-2">
-          <select name="beds" id="beds-select">
-            <option value="1">1 Bed</option>
-            <option value="2">2 Beds</option>
-            <option value="3">3 Beds</option>
-            <option value="4">4 Beds</option>
-          </select>
-        </div>
-        <div class="border-2 border-gray-300 rounded-4xl p-2 h-full">
-          <select name="beds" id="beds-select">
-            <option value="1">1 Bath</option>
-            <option value="2">2 Baths</option>
-            <option value="3">3 Baths</option>
-            <option value="4">4 Baths</option>
-          </select>
-        </div> -->
-        <!-- <input class="border-2 border-gray-300 rounded-4xl cursor-auto p-2 w-88" type="text"/> -->
-        
+          
       </div>
     </div>
 
-    <!-- <div class=" w-full h-[500px] absolute bg-black/50"></div> -->
-    <!-- <img
-      src="/images/hero-temp.jpg"
-      class="z-10 w-full h-[500px] object-cover"
-    /> -->
   </div>
-  <!-- {JSON.stringify(homes)} -->
+  <!-- <div class="h-70 w-full bg-[url('/svgs/footer-bg1.svg')] bg-cover bg-center bg-fixed"></div> -->
 </Layout>
