--- a/src/pages/homes/[modelNumber].astro
+++ b/src/pages/homes/[modelNumber].astro
@@ -11,6 +11,7 @@ import MarginedContent from "@/layouts/MarginedContent.astro";
 import Attributes from "@/components/Home/Attributes.astro";
 import RequestInfoButton from "@/components/Home/RequestInfoButton.astro";
 import HomeTabs from "@/components/Home/HomeTabs.astro";
+import PageTitle from "@/components/reusable/PageTitle.astro";
 
 
 export const getStaticPaths = (async () =>
@@ -64,7 +65,7 @@ const photos = [
       >
         <!-- Model # and Request Info Button -->
         <div class="flex w-full  items-center justify-between">
-          <h1 class="text-3xl md:text-5xl font-semibold">{modelNumber}</h1>
+          <PageTitle title={modelNumber} />
           <RequestInfoButton modelNumber={home.modelNumber} />
         </div>
 
