--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ const email = "homesacross@merica.com";
   >
     <div class="hidden md:block">
       <LeafletMap
-        client:only
+        client:only="react"
         googleMapsUrl={mapsUrl}
         lat={30.492467529996787}
         long={-95.494105528836}
@@ -72,7 +72,7 @@ const email = "homesacross@merica.com";
       </ContactCategory>
       <li class="md:hidden">
         <LeafletMap
-          client:only
+          client:only="react"
           googleMapsUrl={mapsUrl}
           lat={30.492467529996787}
           long={-95.494105528836}
