--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import LeafletMap from "@/modules/maps/LeafletMap";
+// import LeafletMap from "@/modules/maps/LeafletMap";
 
 
 ---
