--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,22 @@
 ---
-import FiltersBar from "@/modules/filters/static/FiltersBar.astro";
-import Layout from "../layouts/Layout.astro";
-import { Icon } from "astro-icon/components";
-import HomePageSearchFilter from "@/components/HomePageSearchFilter.astro";
-import { getCollection } from "astro:content";
-import { getFilters } from "@/modules/filters/utils/getFilters";
-import { getHomeFilters } from "@/utils/filters";
-export const prerender = false;
-// const response = await fetch("https://d1-http.mceryak.workers.dev/homes");
-// const homes = await response.json();
+// import FiltersBar from "@/modules/filters/static/FiltersBar.astro";
+// import Layout from "../layouts/Layout.astro";
+// import { Icon } from "astro-icon/components";
+// import HomePageSearchFilter from "@/components/HomePageSearchFilter.astro";
+// import { getCollection } from "astro:content";
+// import { getFilters } from "@/modules/filters/utils/getFilters";
+// import { getHomeFilters } from "@/utils/filters";
+// export const prerender = false;
+// // // const response = await fetch("https://d1-http.mceryak.workers.dev/homes");
+// // // const homes = await response.json();
 
-const homes = (await getCollection("homes")).map((home) => home.data);
-const filters = getHomeFilters(homes);
+// const homes = (await getCollection("homes")).map((home) => home.data);
+// const filters = getHomeFilters(homes);
 ---
 
-<Layout >
-  Home
-  <!-- <img
-    src="https://michaelceryak.com/cdn-cgi/image/width=80,quality=75/https://cdn.michaelceryak.com/image/r2Image1.png"
-  /> -->
-  <!-- <div
+Home
+<!-- <Layout >
+  <div
     class="relative w-full h-[500px]  bg-[url(/images/hero-temp.jpg)]  bg-cover bg-center"
   >
     <div class="absolute top-0 left-0 w-full h-full bg-black/50">
@@ -40,6 +37,5 @@ const filters = getHomeFilters(homes);
       </div>
     </div>
 
-  </div> -->
-  <!-- <div class="h-70 w-full bg-[url('/svgs/footer-bg1.svg')] bg-cover bg-center bg-fixed"></div> -->
-</Layout>
+  </div>
+</Layout> -->
