--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,15 @@
 // import Layout from "../layouts/Layout.astro";
 // import { Icon } from "astro-icon/components";
 // import HomePageSearchFilter from "@/components/HomePageSearchFilter.astro";
-// import { getCollection } from "astro:content";
+import { getCollection } from "astro:content";
 // import { getFilters } from "@/modules/filters/utils/getFilters";
-// import { getHomeFilters } from "@/utils/filters";
+import { getHomeFilters } from "@/utils/filters";
 // export const prerender = false;
 // // // const response = await fetch("https://d1-http.mceryak.workers.dev/homes");
 // // // const homes = await response.json();
 
-// const homes = (await getCollection("homes")).map((home) => home.data);
-// const filters = getHomeFilters(homes);
+const homes = (await getCollection("homes")).map((home) => home.data);
+const filters = getHomeFilters(homes);
 ---
 
 Home
