now, everything back

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // import FiltersBar from "@/modules/filters/static/FiltersBar.astro";
 import Layout from "../layouts/Layout.astro";
-// import { Icon } from "astro-icon/components";
+import { Icon } from "astro-icon/components";
 import HomePageSearchFilter from "@/components/HomePageSearchFilter.astro";
 import { getCollection } from "astro:content";
 // import { getFilters } from "@/modules/filters/utils/getFilters";
