--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -1,10 +1,10 @@
 ---
-export const prerender = false;
+// export const prerender = false;
 
-const { session } = Astro.locals;
-if (session) {
-  return Astro.redirect("/profile");
-}
+// const { session } = Astro.locals;
+// if (session) {
+  // return Astro.redirect("/profile");
+// }
 
 import GSignInButton from "@/components/auth/SocialSignInButton";
 import Layout from "../layouts/Layout.astro";
