--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import Layout from "@/layouts/Layout.astro";
 import ContactForm from "@/components/client/ContactForm";
 import LeafletMap from "@/modules/maps/LeafletMap";
