--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 // import FiltersBar from "@/modules/filters/static/FiltersBar.astro";
 import Layout from "../layouts/Layout.astro";
 import { Icon } from "astro-icon/components";
