--- a/src/components/Home/Attributes.astro
+++ b/src/components/Home/Attributes.astro
@@ -18,6 +18,6 @@ const { home }: Props = Astro.props;
   <AttributePill
     mdiIcon="ruler-square"
     label="Sq. Ft."
-    value={2323}
+    value={home.sqft}
   />
 </ul>
